--- a/src/pages/[blogId].astro
+++ b/src/pages/[blogId].astro
@@ -1,20 +1,36 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import { getBlogDetail } from "../libs/microcms";
 
 export function getStaticPaths() {
   return [
-    {params: { blogId: 'clifford' }},
-    {params: { blogId: 'rover' }},
+    {params: { blogId: 'nwejejfix' }},
+    {params: { blogId: 'e7ahjumne7ih' }},
     {params: { blogId: 'spot' }},
   ];
 }
 
+const { blogId } = Astro.params;
+const blog = await getBlogDetail(blogId as string);
 ---
 
 <Layout title="Blog Detail">
     <main>
-        <h1>ブログタイトルです</h1>
-        <p>公開日時: 2023/04/11</p>
-        <div>あがうぇらｄｃｖんｍｂ</div>
+        <h1>{blog.title}</h1>
+        <p>{new Date(blog.publishedAt).toLocaleString()}</p>
+        <div set:html={blog.content} />
     </main>
 </Layout>
+
+<style>
+    main {
+        margin: auto;
+        padding: 1em;
+        max-width: 60ch;
+    }
+
+    p {
+        font-size: 14px;
+        color: gray;
+    }
+</style>
